apps/archivebox/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: archivebox
  namespace: archivebox
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: archivebox
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: nginx
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: uptime-kuma
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 192.168.0.0/16
